data/all_generated_tests/raw_wast_tests/nop_StackCorruption_147.wast
;; 8. **Test Description**:    Use `nop` interspersed within a series of push and pop operations on the operand stack. Ensure the sequence of expected values is maintained throughout.    **Constraint Checked**: Validates `nop` does not disrupt the sequence of stack operations.    **Relation to Stack Corruption**: Errors might lead to operand stack corruption, with values being incorrectly handled.

(assert_invalid
  (module (func $test-stack
    (i32.const 42) (nop) (i32.add) (i32.const 1) (nop) (i32.const 2) (nop) (i32.add) (nop) (i32.const 3) (i32.add) (drop)
  ))
  "type mismatch"
)